playground: styling fix: keepDropdownOpen checkbox stretched

--- a/site/src/css/playground.scss
+++ b/site/src/css/playground.scss
@@ -118,7 +118,7 @@
 
   &__demo {
     .iti,
-    input,
+    input[type="tel"],
     .iti-live-results {
       width: 100%;
       max-width: 350px;
